--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "webpack": "^2.2.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
     "file-loader": "^0.10.1",
     "url-loader": "^0.5.8"
   }
