--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
     "apps": [{
         "name": "kurlyfries",
         "script": "npm",
-        "args": "run production"
+        "args": "run start"
     }]
 }
