--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dependencies": {
         "connect-history-api-fallback": "^1.3.0",
         "express": "^4.15.2",
+        "less": "^3.9.0",
+        "less-loader": "^5.0.0",
+        "postcss-loader": "^3.0.0",
         "vue": "^2.2.2",
         "vue-analytics": "^3.0.0",
         "vue-router": "^2.3.0"
