--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
     "name": "kurlyfries.com",
-    "version": "0.0.1",
+    "version": "2.0.0",
     "description": "Kurlyfries.com",
     "private": true,
-    "main": "index.js",
+    "type": "module",
     "scripts": {
-        "dev": ""
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint ."
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "eslint": "^8.13.0",
+        "eslint-config-brian": "^1.0.8",
+        "eslint-plugin-svelte3": "^3.4.1",
+        "less": "^4.1.2",
+        "svelte-navigator": "^3.1.5",
+        "svelte-preprocess": "^4.10.5"
+    },
+    "devDependencies": {
+        "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+        "svelte": "^3.44.0",
+        "vite": "^2.9.0"
     }
 }
