--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "license": "ISC",
     "dependencies": {
         "@beyonk/svelte-google-analytics": "^2.6.4",
-        "eslint": "^8.25.0",
-        "eslint-config-brian": "^1.0.13",
-        "eslint-plugin-svelte3": "^4.0.0",
         "less": "^4.1.3",
-        "svelte-navigator": "^3.2.2",
-        "svelte-preprocess": "^4.10.7"
+        "svelte-navigator": "^3.2.2"
     },
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^1.0.9",
-        "svelte": "^3.52.0",
-        "vite": "^3.1.8"
+        "@sveltejs/vite-plugin-svelte": "^2.0.4",
+        "eslint": "^8.38.0",
+        "eslint-config-brian": "^1.0.19",
+        "eslint-plugin-svelte3": "^4.0.0",
+        "svelte": "^3.58.0",
+        "svelte-preprocess": "^5.0.3",
+        "vite": "^4.2.1"
     }
 }
