--- a/package.json
+++ b/package.json
@@ -13,17 +13,15 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "@beyonk/svelte-google-analytics": "^2.6.4",
-        "less": "^4.1.3",
-        "svelte-navigator": "^3.2.2"
-    },
     "devDependencies": {
+        "@beyonk/svelte-google-analytics": "^2.6.4",
         "@sveltejs/vite-plugin-svelte": "^2.0.4",
         "eslint": "^8.38.0",
         "eslint-config-brian": "^1.0.19",
         "eslint-plugin-svelte3": "^4.0.0",
+        "less": "^4.1.3",
         "svelte": "^3.58.0",
+        "svelte-navigator": "^3.2.2",
         "svelte-preprocess": "^5.0.3",
         "vite": "^4.2.1"
     }
